--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,6 @@
 # .github/workflows/ci.yml
 name: CI for JavaScript Modules
 
-# Triggers the workflow on push or pull request events
 on:
   push:
     branches:
@@ -25,6 +24,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Fix Jest permission issue
+        run: chmod +x ./node_modules/.bin/jest
 
       - name: Run Tests for Module 1
         run: npm run test:module1
